[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "medstats"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "lifelines>=0.27",
    "scikit-learn>=1.3",
    "statsmodels>=0.14",
    "scipy>=1.11",
    "pandas>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
